# pywireguard

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS
doc/: requirements.txt
doc/source/: conf.py  index.rst  interface.rst  peer.rst  utils.rst
src/pywireguard/: cwireguard.pxd  factory.py  wireguard.pyx
src/pywireguard/base/: exceptions.py  interface.py  peer.py  utils.py
src/pywireguard/base/cli/: interface.py  peer.py
src/pywireguard/base/darwin/: interface.py
src/pywireguard/base/linux/: interface.py  peer.py
src/pywireguard/base/userspace/: interface.py  peer.py
src/pywireguard/base/windows/: interface.py
src/pywireguard/c_lib/: c_fixes.c  wireguard.h
tests/: test_interface.py
