[metadata]
name = pywireguard
version = file: VERSION
author = Paulo Luna
author_email = jpsl93@hotmail.com
description = A python bind to the Wireguard single-file C library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/inloco/pywireguard
project_urls =
    Bug Tracker = https://github.com/inloco/pywireguard/issues
    Source Code = https://github.com/inloco/pywireguard
    Documentation = https://pywireguard.readthedocs.io/en/latest/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
