[metadata]
name = pywireguard
version = file: VERSION
author = Paulo Luna
author_email = jpsl93@hotmail.com
description = A cross-platform Python library for managing WireGuard interfaces.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/inloco/pywireguard
project_urls =
    Bug Tracker = https://github.com/inloco/pywireguard/issues
    Source Code = https://github.com/inloco/pywireguard
    Documentation = https://pywireguard.readthedocs.io/en/latest/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pyroute2.core~=0.6.5
    cryptography~=3.4.7

[options.packages.find]
where = src
